--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@freetube/yt-comment-scraper": "^6.2.0",
     "axios": "^1.4.0",
     "depcheck": "^1.4.3",
     "express": "^4.18.2",
