--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@freetube/yt-comment-scraper": "^6.2.0",
     "axios": "^1.4.0",
+    "cookie-parser": "^1.4.6",
     "depcheck": "^1.4.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "ytdl-core": "^4.11.3"
   }
 }
