--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "depcheck": "^1.4.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "node-cron": "^3.0.2",
     "ytdl-core": "^4.11.3"
   }
 }
